fixed unreadable elements in mail filter dialog

--- a/darkGmail.user.css
+++ b/darkGmail.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Dark Gmail by keystoneclimber
 @namespace      http://www.brandontarr.com
-@version        1.0.10
+@version        1.0.11
 @description    dark style for Gmail
 @author         keystoneclimber
 @homepageURL    https://github.com/keystoneclimber/stylus_scripts/
@@ -416,6 +416,28 @@ div.qj.qr {
   display: none;
 }
 
+    
+/* -------------------------------- */
+/* email filters                    */
+/* -------------------------------- */    
+label, label.bs3, div[role="option"] {
+  color: var(--color-text-menus) !important; 
+}    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
 
 /* -------------------------------- */
 /* message body */
